--- a/WebProject/WebContent/css/custom.css
+++ b/WebProject/WebContent/css/custom.css
@@ -4,7 +4,6 @@
 * {
 	font-family: 'Nanum Gothic';
 }
-
 thead th{
 	background-color: #006DCC;
 	color: white;
@@ -37,5 +36,20 @@ h2{
 h1{
 	font-family: 'Hanna';
 }
-
-
+.vertical-alignment-helper {
+	display: table;
+	height: 100%;
+	width: 100%;
+	pointer-events:none;
+}
+.vertical-align-center{
+	display: table-cell;
+	vertical-align: middle;
+	pointer-events: none;
+}
+.modal-content {
+	width: inherit;
+	height: inherit;
+	margin: 0 auto;
+	pointer-events: none;
+}
